Home screen and verify in-person screen: Ensure that bolded text is replicated

--- a/app/src/assets/stylesheets/styles.scss
+++ b/app/src/assets/stylesheets/styles.scss
@@ -29,8 +29,12 @@ h4.usa-step-indicator__heading {
   border-radius: 0.5rem;
 }
 
-.spaced-accordion .usa-accordion__heading:not(:first-child),
+.ipp .usa-accordion__heading:not(:first-child),
 .usa-prose .usa-accordion__heading:not(:first-child) {
   margin-top: 2rem !important;
   // 😬, open to refactoring this for sure.
+}
+
+.ipp .usa-accordion__button {
+  font-weight: bold;
 }
