first steps on getting web component imported

--- a/app/src/assets/stylesheets/styles.scss
+++ b/app/src/assets/stylesheets/styles.scss
@@ -10,6 +10,8 @@
 // 3. Load your project's custom Sass
 // @forward "project-custom.scss";
 
+@forward "components/_step-indicator";
+
 .flex-wrapper {
   display: flex;
   min-height: 100vh;
